--- a/Day2/2.3.retrain_imrecog_whole.ipynb
+++ b/Day2/2.3.retrain_imrecog_whole.ipynb
@@ -92,6 +92,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "#minimizes info to stdout\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'"
    ]
   },
